--- a/.github/workflows/build_test_eshop.yaml
+++ b/.github/workflows/build_test_eshop.yaml
@@ -1,7 +1,14 @@
 name: 'Build and test our Eshop'
-on:  
+
+on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - main
   push:
+    branches:
+      - master
+      - main
 
 jobs:
   Install:
@@ -78,7 +85,8 @@ jobs:
 
       - name: Run Tests
         run: |
-          npm run test -- --colors          
+          npm run test -- --colors       
+
   DeployToAws:
     needs: [ Build, Test ]
     runs-on: ubuntu-latest
