--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -6,14 +6,14 @@
     - name: Launch EC2 instance
       amazon.aws.ec2:
         instance_type: t2.medium
-        image: ami-04902260ca3d33422
+        image: ami-0c02fb55956c7d316
         region: us-east-1
         key_name: vockey
         vpc_subnet_id: subnet-0d5d8cada106c7831
         assign_public_ip: yes
+        wait: yes
         count: 1
         group: eshop
-        wait: true
         aws_access_key: "{{ access_key }}"
         aws_secret_key: "{{ secret_key }}"
         security_token: "{{ session_token }}"
@@ -37,14 +37,6 @@
   connection: ssh
 
   tasks:
-    - name: Add Centos Extras
-      shell: yum-config-manager --enable extras
-      become: yes
-
-    - name: Enable docker package
-      shell: amazon-linux-extras enable docker
-      become: yes
-
     - name: Install Docker and Git
       yum:
         name:
@@ -53,31 +45,28 @@
         state: latest
         update_cache: yes
       become: yes
-
     - service:
         name: docker
         state: started
         enabled: yes
+      become: yes      
+    - name: Start Docker on startup
+      shell: systemctl enable docker
       become: yes
-
     - name: Set rights to Docker
       shell: usermod -a -G docker ec2-user
       become: yes
-
     - name: Checkout Git repo
       git:
         repo: "https://github.com/ffastikk/4IT572_docker.git"
         dest: ./app
-
     - name: Build eshop docker
       shell: cd app && docker build -t eshop:latest .
       become: yes
-
     - name: Run eshop
       shell: docker run -p 80:3000 eshop
       async: 45
       poll: 0
       become: yes
-
     - wait_for:
         port: 80
