--- a/ansible/ec2_deploy.yml
+++ b/ansible/ec2_deploy.yml
@@ -5,7 +5,7 @@
   tasks:
     - name: Launch EC2 instance
       amazon.aws.ec2:
-        instance_type: t2.medium
+        instance_type: t2.micro
         image: ami-0c02fb55956c7d316
         region: us-east-1
         key_name: vockey
